# boron-chat

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  deps.nix  flake.nix  justfile
.github/workflows/: release.yaml
_nix/: boron.nix  boron_client.nix  boron_server.nix  client.nix  client_pkg.nix  client_runtime.nix  client_runtime_pkg.nix  deps.nix  pkg.nix  server.nix  server_pkg.nix  shell.nix
boron_rust/: Cargo.toml
boron_rust/client_runtime/: Cargo.toml
boron_rust/common/src/: lib.rs
boron_rust/server/: Cargo.toml
client/: CMakeLists.txt  justfile
client/include/: components.hpp  debug.hpp  layout.hpp  user_interface.hpp
client/net/: Cargo.toml
client/net/src/: lib.rs  message.rs  update.rs
client/runtime/: CMakeLists.txt  Cargo.toml
client/runtime/src/: lib.rs
client/src/: components.cpp  debug.cpp  main.cpp
client/src/layout_components/: login_button.cpp  message_input.cpp  navbar_button.cpp  render_chat.cpp  send_button.cpp
client/src/layout_pages/: _pages.cpp  chat.cpp  debug.cpp  login.cpp
client/src/scenes/: game.cpp  main_menu.cpp
client/src/systems/: global_events.cpp
client/src/systems/render/: _render.cpp
client/src/user_interface/game/: pause_menu.cpp  player_interface.cpp
common/: Cargo.toml
common/include/common/: common.hpp  constants.hpp  context.hpp  layout_engine.hpp  memory_arena.hpp  theme_engine.hpp
common/src/: common.cpp  context.cpp  debug.cpp  debug.rs  layout_engine.cpp  lib.rs  memory_arena.cpp  page_engine.cpp  theme_engine.cpp  utils.cpp
net/: CMakeLists.txt
net/src/: client.rs  constants.rs  debug.rs  lib.rs  server.rs
rust/: Cargo.toml
rust/boron_common/: Cargo.toml
rust/boron_server/: Cargo.toml  justfile
rust/client_runtime/: CMakeLists.txt  Cargo.toml
server/: Cargo.toml  justfile  test.http
server/src/: command.rs  error.rs  game_server.rs  main.cpp  main.rs  server_state.rs  web_server.rs
