[workspace]
resolver = "3"
members = ["common", "client_runtime", "server"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"

[workspace.dependencies]
rand = "0.9.2"
renet = "1.2.0"
renet_netcode = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
