[package]
name = "boron_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
boron_common = { path = "../common" }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
flatbuffers = "25.9.23"
rand = "0.9.2"
renet = "1.2.0"
renet_netcode = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
