[package]
name = "boron_server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
boron_common = { path = "../boron_common" }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rand.workspace = true
renet.workspace = true
renet_netcode.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48.0", features = ["full"] }
